Session: connect to KJob::finished() rather than result()

KJob::result() is not emitted when job is killed quietly which prevents
Session from scheduling the next job until the killed job is destroyed.
This leads to responses being delivered to a wrong job when the job is
killed.

BUG: 364005
CCMAIL: faure@kde.org